Create tiny JS SVG grid demo.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,3 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    script(src='/javascripts/pathfinding-browser.min.js')
+    script(src='/javascripts/bma-script.js')
