--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,4 @@ html
   body
     block content
     script(src='/javascripts/bootstrap.min.js')
-    script(src='/javascripts/pathfinding-browser.min.js')
-    script(src='/javascripts/bma-script.js')
+    script(src='/javascripts/bundle.js')
