--- a/views/a-star.pug
+++ b/views/a-star.pug
@@ -7,5 +7,5 @@ block content
         h2 Raster
         #container
       .col-sm
-        h1 Willkommen
+        h1= title
         pre: code#debug-out
