--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,17 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/bundle.js')
+  body
+    nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
+      ul.navbar-nav
+        li.nav-item: a.navbar-brand.nav-link(href="/") BMA
+        li.nav-item.dropdown
+          a.nav-link.dropdown-toggle(data-toggle="dropdown" id="algorithms" href="#" role="button" aria-haspopup="true" aria-expanded="false") Pathfinder
+          .dropdown-menu(aria-labelledby="algorithms")
+            a.dropdown-item(href="/pathfinder/a-star") A*
+            a.dropdown-item(href="/undefined") Dijkstra
+        li.nav-item: a.nav-link(href="/undefined") Vergleiche
+    block content
