--- a/views/a-star.pug
+++ b/views/a-star.pug
@@ -4,8 +4,9 @@ block content
   .container
     .row
       .col-sm
+        h1= title
+        p [A* Pathfinder Beschreibung hier]
+        pre: code#debug-out
+      .col-sm
         h2 Raster
         #container
-      .col-sm
-        h1= title
-        pre: code#debug-out
