--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,14 @@ block content
   .container
     .row
       .col-sm
-        h2 Raster
-        #container
-      .col-sm
-        h1 Willkommen
+        h1 Willkommen!
+        h2 Um was geht es?
+        p Pathfinding Algorithmen! Sie finden in einer zweidimensionalen Matrix den passenden Weg von A nach B.
+        p Unsere Webapplikation veranschaulicht die verschiedenen Arten der Pathfinder, erklärt deren Funktionsweisen und vergleicht sie. Navigieren Sie die verschiedenen Szenarien und Demos mittels der Navigation.
         pre: code#debug-out
+      .col-sm
+        h2 Pathfinding Algorithmen
+        img.img-fluid(src="/images/pathfinding_2d_illustration.svg")
+        p
+          a(href="https://commons.wikimedia.org/wiki/File:Pathfinding_2D_Illustration.svg" target="_blank") Quelle
+          |  (Public Domain)
