--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/bundle.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async)
   body
     nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
       ul.navbar-nav
