--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,9 +5,10 @@ html
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery.min.js')
+    script(src='/javascripts/popper.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML')
     script(src='/javascripts/bundle.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async)
   body
     nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
       ul.navbar-nav
