--- a/views/a-star.pug
+++ b/views/a-star.pug
@@ -26,7 +26,7 @@ block content
         // Controls
         form(action="" method="get")
           .row
-            .col-4: label(for="controls-dimension") Matrixgrösse
+            .col-4: label(for="controls-dimension") Rastergrösse
             .col-sm
                 .form-group
                   .row
