--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,9 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  .container
+    .row
+      .col-sm
+        h1= message
+        h2= error.status
+        pre #{error.stack}
