--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,8 +18,8 @@ html
           a.nav-link.dropdown-toggle(data-toggle="dropdown" id="algorithms" href="#" role="button" aria-haspopup="true" aria-expanded="false") Pathfinder
           .dropdown-menu(aria-labelledby="algorithms")
             a.dropdown-item(href="/pathfinder/a-star") A*
-            a.dropdown-item(href="/undefined") Dijkstra
-        li.nav-item: a.nav-link(href="/undefined") Vergleiche
+            a.dropdown-item(href="/pathfinder/dijkstra") Dijkstra
+        li.nav-item: a.nav-link(href="/") Vergleiche
         li.nav-item: a.nav-link(href="/credits") Autoren
 
 
