--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -11,6 +11,9 @@ h2 Raster
   .col-sm
     h3 Status
 .row
+  .col-4: p Algorithmus:
+  .col-8: p#stat-algorithm: i Nicht definiert
+.row
   .col-4: p Startpunkt:
   .col-2: p#stat-start: i Berechne...
   .col-4: p Endpunkt:
