--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     script(src='/javascripts/jquery.min.js')
     script(src='/javascripts/popper.min.js')
     script(src='/javascripts/bootstrap.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML')
+    script(src='/javascripts/MathJax/MathJax.js?config=TeX-MML-AM_CHTML')
     script(src='/javascripts/bundle.js')
   body
     nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
