Make start and endpoint in status output more compact.

--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -14,10 +14,9 @@ h2 Raster
   .col-4: p Algorithmus:
   .col-8: p#stat-algorithm: i Nicht definiert
 .row
-  .col-4: p Startpunkt:
-  .col-2: p#stat-start: i Berechne...
-  .col-4: p Endpunkt:
-  .col-2: p#stat-end: i Berechne...
+  .col-4: p Start- und Endpunkt:
+  .col-4: p#stat-start: i Berechne...
+  .col-4: p#stat-end: i Berechne...
 .row
   .col-4: p Zurückgelegter Weg:
   .col-8: p#stat-distance: i Berechne...
