Add elapsed time status.

--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -20,6 +20,9 @@ h2 Raster
 .row
   .col-4: p Zurückgelegter Weg:
   .col-8: p#stat-distance: i Berechne...
+.row
+  .col-4: p Vergangene Zeit:
+  .col-8: p#stat-elapsed-time: i Berechne...
 
 // Horizontal line
 .row: .col-sm: hr
