--- a/views/a-star.pug
+++ b/views/a-star.pug
@@ -27,4 +27,5 @@ block content
         gridWidth: gridWidth,
         gridHeight: gridHeight
       });
+      bma.addPresetGrids('!{query.gridType}') // Load preset grid / scenarios from src/preset-grids.js
     }, false);
