Correct small UI things (#25)
* Correct default selected grid type.

* Small corrections.

--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -46,7 +46,7 @@ form(action="" method="get")
         .form-group
           select.form-control(name="gridType" id="controls-type")
   .row
-    .col-sm: p Hinweis: Bei Generatoren ergibt sich ein zufälliges Raster. Bei vorgefertigten Raster wird die Rastergrösse ignoriert.
+    .col-sm: p Hinweis: Bei vorgefertigten Raster wird die Rastergrösse nicht beachtet.
   .row
     .col-4: label(for="controls-diagonal") Diagonale zulassen:
     .col-sm
