--- a/views/credits.pug
+++ b/views/credits.pug
@@ -7,6 +7,8 @@ block content
         h1= title
         p Diese Arbeit ist frei unter der AGPL 3 Lizenz verfügbar: 
           a(href="https://github.com/fuerbringer/bma" target="_blank") GitHub Repository
+        p Die Quelltextdokumentation ist hier zugänglich: 
+          a(href="/docs" target="_blank") /docs
         h2 Entwicklung
         ul
           li: a(href="https://github.com/fuerbringer" target="_blank") Severin Fürbringer
