--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,8 @@ block content
           .col-6
               h1 Willkommen!
               h2 Um was geht es?
-              p Pathfinding Algorithmen! Sie finden in einem zweidimensionalen Raum den passenden Weg vom Start- zum Endpunkt.
-              p Unsere Webapplikation veranschaulicht die verschiedenen Arten der Pathfinder, erklärt deren Funktionsweisen und vergleicht sie.
+              p Pathfinding Algorithmen! Sie finden in einem zweidimensionalen Raum den schnellsten Weg vom Start- zum Endpunkt.
+              p Unsere Webapplikation veranschaulicht die verschiedenen Arten der Pathfinder, erklärt deren Funktionsweisen und analysiert allfällige Abweichungen.
               a(href="/intro").btn.btn-primary Zur Einführung
               pre: code#debug-out
           .col-6
