--- a/views/introduction.pug
+++ b/views/introduction.pug
@@ -12,7 +12,9 @@ block content
               a(href="#1") #
             .row
               .col-sm
-                p Um diese Berufsmaturitätsarbeit adäquat verstehen zu können, benötigt man einen gewissen Wissensstand. Darum werden die Pathfinder als nächstes verständlich erklärt und im Anschluss das Ziel dieser Arbeit aufgelistet.
+                p Um diese Berufsmaturitätsarbeit adäquat verstehen zu können, benötigt man einen gewissen Wissensstand. Darum werden die Pathfinder als nächstes verständlich erklärt und im Anschluss das Ziel dieser Arbeit aufgelistet. Diese Seite sollte gelesen und verstanden werden, bevor man sich mit den weiteren Seiten auseinandersetzt. Da sich unsere Arbeit tief im Teilgebiet Informatik bewegt, steht ausserdem ein 
+                  a(href="/glossary") Glossar
+                  |  zum Nachschlagen von Fachbegriffen zur Verfügung.
                 p 
                   i.fa.fa-info-circle(aria-hidden="true")
                   |  Ein 
@@ -74,8 +76,6 @@ block content
                 em Dijkstra(Raum, Startpunkt, Endpunkt) 
                   i.fa.fa-long-arrow-right(aria-hidden="true")
                   |  Weg
-
-            .row: .col-sm: hr
 
             .row
               .col-8
