--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,8 +20,10 @@ html
           | 2. Visualisierung der Pathfinder
         li.nav-item: a.nav-link(href="/comparison" title="Der Vergleich zeigt die Eigenschaften verschiedener Pathfinder nebeneinander.")
           | 3. Vergleich der Pathfinder
+        li.nav-item: a.nav-link(href="/glossary")
+          | 4. Glossar
         li.nav-item: a.nav-link(href="/credits")
-          | 4. Autoren
+          | 5. Autoren
 
     .page-core: block content
 
