--- a/views/glossary.pug
+++ b/views/glossary.pug
@@ -34,6 +34,10 @@ block content
               td Eine Art Algorithmus, der in einem gegebenen Raum mit eingezeichnetem Start- und Endpunkt den schnellsten weg Findet.
               td A*, Dijkstra.
             tr
+              td PathFinding.js
+              td Die Zentrale Programmbibliothek, deren Pathfinder Implementationen wir in unserer Webapplikation nutzen.
+              td: a(href="https://github.com/qiao/PathFinding.js" target="_blank") Quellcode
+            tr
               td Matrix
               td Anordnung von Elementen. In unserem Fall ein zweidimensionales Raster, in dem Wände, Korridore und Wege platziert sind.
               td Man kann sich in unserem Fall eine Matrix als eine Art Koordinatensystem mit eingezeichneten Blöcken vorstellen, in dem Wege gefunden werden.
