--- a/views/comparison.pug
+++ b/views/comparison.pug
@@ -6,3 +6,6 @@ block content
       .col-sm
         h1= title
         p Pathfinding Algorithmen werden hier verglichen (Side-by-side).
+      .col-sm
+        include comparison-block
+  include comparison-script
