--- a/views/glossary.pug
+++ b/views/glossary.pug
@@ -30,6 +30,10 @@ block content
               td Hilfsalgorithmus, unter Anderem für Pathfinder, der zusätzlich hilft zwischen einzelnen Schritten die Kosten für eine mögliche Operation einzuschätzen.
               td Chebyshev, Euklidisch, Manhattan, Oktil.
             tr
+              td Parameter
+              td Die Randbedingungen für einen Durchlauf bzw. ein Experiment.
+              td Der Start- und Endpunkt und ein spezifisches Labyrinth, die man dem A*-Pathfinder übergibt, wären Parameter.
+            tr
               td Pathfinder
               td Eine Art Algorithmus, der in einem gegebenen Raum mit eingezeichnetem Start- und Endpunkt den schnellsten weg Findet.
               td A*, Dijkstra.
@@ -41,3 +45,7 @@ block content
               td Matrix
               td Anordnung von Elementen. In unserem Fall ein zweidimensionales Raster, in dem Wände, Korridore und Wege platziert sind.
               td Man kann sich in unserem Fall eine Matrix als eine Art Koordinatensystem mit eingezeichneten Blöcken vorstellen, in dem Wege gefunden werden.
+            tr
+              td recbacktracker
+              td "Recursive Backtracker". Ein Labyrinthalgorithmus, den wir in unserer Webapplikation zur Generierung von perfekten (immer lösbaren) Labyrinthen verwenden.
+              td: a(href="https://en.wikipedia.org/wiki/Maze_generation_algorithm#Recursive_backtracker" target="_blank") Wikipedia Kurzfassung
