--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -3,6 +3,8 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   .page-core
     min-height: 85vh;
+    .grid-slider
+      text-align: center;
 
 a
   color: #00B7FF
