Improvements on slider buttons: hide when not needed and status text.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -3,6 +3,8 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
   .page-core
     min-height: 85vh;
+    #grid-left
+      margin-right: 15px;
     .grid-slider
       text-align: center;
 
